                       User-Visible DocKnot Changes

DocKnot 3.03 (unreleased)

    For CPAN packages pushed to GitHub, add a Shields.io license badge to
    the Markdown README file.

    For packages with a Debian package, add a Shields.io badge for the
    version in Debian.

    docknot dist now supports a distribution/ignore metadata setting,
    which contains a list of regular expressions of files to ignore when
    checking a distribution tarball for completeness.

    Stop leaking exceptions via $@ to the caller of App::DocKnot::Config.
    Configuration parsing catches and ignores a variety of errors, which
    previously were polluting the caller's $@.

    Skip the dist integration test if xz is not available.

DocKnot 3.02 (2020-01-08)

    Add support for the No Maintenance Intended badge in the Markdown
    README file if the package is marked as orphaned.

    If the native distribution generation commands create only a
    gzip-compressed tarball, generate an xz-compressed tarball from the
    gzip-compressed tarball during docknot dist.

    docknot dist now checks for files present in the source tree but
    missing from the distribution, apart from a (currently hard-coded)
    list of exceptions.

    docknot dist now removes any existing directory when creating a new
    distribution.  It overrides permissions if possible while doing this
    so that it can clean up from a failed Automake make distcheck, so the
    destination directory should be trusted, not one to which an attacker
    may be able to write files.

    Remove make warnings from the commands when building a distribution
    that supports C++ with the C++ compiler, since my current Autoconf
    warning flag discovery code doesn't properly exclude options that are
    unsupported by C++.

    Properly skip a test on Windows that requires tar.

DocKnot 3.01 (2019-07-14)

    docknot dist now also runs make check-cppcheck for Autoconf build
    systems.
