@@ -59,6 +59,7 @@ The following additional Perl modules are required to use it:
 
 * File::BaseDir
 * File::ShareDir
+* IO::Compress::Xz (part of IO-Compress-LZMA)
 * IPC::Run
 * IPC::System::Simple
 * JSON
